--- a/template-parts/_content.scss
+++ b/template-parts/_content.scss
@@ -72,6 +72,7 @@
 
   pre {
     font-family: var(--mono-font);
+    white-space: pre-wrap;
   }
 
   hr {
